--- a/src/views/Components/Components.module.scss
+++ b/src/views/Components/Components.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  max-width: 350px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -25,4 +25,8 @@
   max-width: 400px;
   justify-content: center;
   align-items: center;
+}
+
+.Notification {
+  width: 100%;
 }
