--- a/src/views/UseRef/UseRef.module.scss
+++ b/src/views/UseRef/UseRef.module.scss
@@ -5,11 +5,12 @@
   justify-content: flex-start;
 }
 
-.Input {
-  transition: 0.4s ease transform;
-  display: block;
-}
-
-.Button {
-  max-width: 150px;
+.Wrapper {
+  background-color: pink;
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
