--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
   overflow: auto;
+
+  @media screen and (min-width: 700px) {
+    justify-content: center;
+  }
 }
 
 .NavBarList::-webkit-scrollbar {
